<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phraze Craze</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LEADERBOARD_ID_OLD">CgkI7qLXncMNEAIQAA</string>
    <string name="LEADERBOARD_ID_1_MIN"> CgkI7qLXncMNEAIQCQ</string>
    <string name="LEADERBOARD_ID_2_MIN">CgkI7qLXncMNEAIQCA</string>
    <string name="LEADERBOARD_ID_3_MIN">CgkI7qLXncMNEAIQCg</string>
    <string name="APP_ID">464724021614</string>
    <string name="title_activity_pre_timed_play">Phraze Craze Timed Play</string>
    <string name="pre_timed_play_banner">Timed Play</string>
    <string name="oneMin">1 Minutes</string>
    <string name="twoMin">2 Minutes</string>
    <string name="threeMin">3 Minutes</string>
    <string name="title_activity_timed_play">Phraze Craze Timed Play</string>
    <string name="title_activity_settings">Phraze Craze Settings</string>
    <string name="title_suggest_phraze">Contribute A Phraze</string>
    <string name="defaultPhraze">Knew Your Cane Keys</string>
    <string name="suggest_phraze">Suggest A Phraze</string>
    <string name="suggest_phraze_hint">Type in Phraze Here!</string>
    <string name="suggest_answer_hint">Type in Answer Here!</string>
    <string name="pause">Pause Game</string>
    <string name="timer">Time: </string>
    <string name="phrazesCompleted">Score:</string>
    <string name="title_activity_timed_play_paused">TimedPlayPaused</string>
    <string name="paused">Game Paused</string>
    <string name="phrazesFinished">Score: </string>
    <string name="timeRemaining">Time Remaining: </string>
    <string name="buy_phraze">Buy More Phrazes</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_timed_play_game_over">TimedPlayGameOver</string>
    <string name="gameOver">Game Over!</string>
    <string name="completedPhrazes">You completed</string>
    <string name="newHighScore">New High Score!</string>
    <string name="title_activity_free_play">FreePlay</string>
    <string name="currentStreak">Current Streak:</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="highScores">High Scores</string>
    <string name="phrazeCraze"> Phraze Craze</string>
    <string name="suggestAPhraze">Suggest a Phraze</string>
    <string name="instructions">Instructions</string>
    <string name="skipsLeft">Number of skips left: </string>
    <string name="oneMinAchievement">CgkI7qLXncMNEAIQCw</string>
    <string name="twoMinAchievement">CgkI7qLXncMNEAIQDg</string>
    <string name="threeMinAchievement">CgkI7qLXncMNEAIQDw</string>
    <string name="overOneHundredAchievement">CgkI7qLXncMNEAIQEA</string>
    <string name="tenInARowAchievement">CgkI7qLXncMNEAIQEQ</string>
    <string name="instructionsBody">\tPlaying Phraze Craze is easy! The goal of the game is to find the common phrase hidden underneath the group of random words.\n\tIn Timed Play Mode, the objective is to get as many of these Phrazes correct as possible in the time duration. The user is given a certain number of skips (depending on the game time chosen) where they can go to the next Phraze if they are stuck.
In Free Play Mode, the user can take their time to try and decipher the Phrazes. There is no time limit, but the user can challenge him or herself by trying to increase their streak of correctly answered Phrazes.\n\tHighscores are available in Timed Play Mode when the user is signed in. There are achievements to be unlocked in both Timed Play and Free Play modes.\n\tIf you have any questions, concerns, or feedback feel free to send an email using the \"Suggest a Phraze\" page. Also, new Phraze submissions are always appreciated!\n</string>

</resources>
