<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TimedPlayPaused" >

	<ImageButton
	    android:id="@+id/buyPhrazeButton"
	    android:layout_width="240sp"
	    android:layout_height="80sp"
	    android:background="@drawable/purchase_phrazes_selector"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="100dp"
	    android:paddingTop="15sp"
	    android:text="@string/buy_phraze"
	    android:textSize="20sp" />

	<ImageButton
	    android:id="@+id/suggestPhrazeButton"
	    android:layout_width="240sp"
	    android:layout_height="80sp"
	    android:background="@drawable/suggest_phrazes_selector"
	    android:layout_above="@+id/buyPhrazeButton"
	    android:layout_alignLeft="@+id/buyPhrazeButton"
	    android:layout_marginBottom="54dp"
	    android:paddingTop="15sp"
	    android:text="@string/suggest_phraze"
	    android:textSize="20sp" />

	<ImageButton
	    android:id="@+id/instructionsButton"
	    android:layout_width="240sp"
	    android:layout_height="80sp"
	    android:background="@drawable/instructions_button_selector"
	    android:layout_above="@+id/suggestPhrazeButton"
	    android:layout_alignLeft="@+id/suggestPhrazeButton"
	    android:layout_marginBottom="57dp"
	    android:text="@string/instructions"
	    android:textSize="20sp" />

</RelativeLayout>
