<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TimedPlayPaused" >

	<TextView
		android:id="@+id/pausedText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:paddingTop="15sp"
		android:layout_centerHorizontal="true"
		android:textSize="40sp"
		android:textColor="@color/green"
		android:text="@string/paused" />
	
	<TextView
	    android:id="@+id/completedPhrazesText"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/pausedText"
		android:paddingTop="50sp"
		android:layout_centerHorizontal="true"
		android:textSize="25sp"
		android:textColor="@color/green"
		android:text="@string/phrazesFinished" />

	<TextView
	    android:id="@+id/timeLeftText"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/completedPhrazesText"
		android:paddingTop="15sp"
		android:layout_centerHorizontal="true"
		android:textSize="25sp"
		android:textColor="@color/green"
		android:text="@string/timeRemaining" />
	
	<Button 
	    android:id="@+id/suggestPhrazeButton"
	    android:layout_width="200sp"
		android:layout_height="60sp"
		android:layout_below="@id/timeLeftText"
		android:layout_marginTop="50sp"
		android:layout_centerHorizontal="true"
		android:textSize="20sp"
		android:text="Resume" />
	
	<Button 
	    android:id="@+id/buyPhrazeButton"
	    android:layout_width="200sp"
		android:layout_height="60sp"
		android:layout_below="@id/suggestPhrazeButton"
		android:paddingTop="15sp"
		android:layout_centerHorizontal="true"
		android:textSize="20sp"
		android:text="Leave Game" />
</RelativeLayout>
