<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >
	
    <ScrollView
		android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    <RelativeLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
    <TextView
		android:id="@+id/suggestPhrazeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:paddingTop="15sp"
		android:layout_centerHorizontal="true"
		android:textSize="40sp"
		android:textColor="@color/green"
		android:text="@string/suggestAPhraze" />
    
    <EditText
        android:id="@+id/suggest_phraze"
        android:hint="@string/suggest_phraze_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_below="@id/suggestPhrazeText"
		android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp" >
    </EditText>

    <EditText
        android:id="@+id/suggest_answer"
        android:hint="@string/suggest_answer_hint"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggest_phraze" />

    <ImageButton
        android:id="@+id/suggestButton"
	    android:layout_width="150sp"
	    android:layout_height="50sp"
	    android:layout_below="@id/suggest_answer"
	    android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
	    android:background="@drawable/submit_button_selector" />
    
		</RelativeLayout>
    </ScrollView>
</RelativeLayout>
